--- a/QPest/MapStoryboard.storyboard
+++ b/QPest/MapStoryboard.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -41,24 +42,150 @@
                         <rect key="frame" x="0.0" y="64" width="384" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="edg-dp-iup"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="rPj-WQ-7jb"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lvf-bw-Zlc">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="43" id="9FC-k9-Crf"/>
+                                    <constraint firstAttribute="height" constant="43" id="cGe-OR-eUh"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="centerMap"/>
+                                <connections>
+                                    <action selector="didClickCenterMap:" destination="zlH-6U-Gh7" eventType="touchUpInside" id="NFP-eG-LPE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="edg-dp-iup" secondAttribute="trailing" id="ETd-Ud-S4u"/>
-                            <constraint firstItem="dbj-KH-JIK" firstAttribute="top" secondItem="edg-dp-iup" secondAttribute="bottom" id="UZx-Z6-eWZ"/>
-                            <constraint firstItem="edg-dp-iup" firstAttribute="top" secondItem="i1l-4o-hbs" secondAttribute="bottom" id="pnT-Rq-yft"/>
-                            <constraint firstItem="edg-dp-iup" firstAttribute="leading" secondItem="JhP-qt-VFc" secondAttribute="leading" id="zh5-sb-qaL"/>
+                            <constraint firstAttribute="trailing" secondItem="rPj-WQ-7jb" secondAttribute="trailing" id="H2L-Ny-3vK"/>
+                            <constraint firstItem="rPj-WQ-7jb" firstAttribute="leading" secondItem="JhP-qt-VFc" secondAttribute="leading" id="NXh-jV-NvL"/>
+                            <constraint firstItem="dbj-KH-JIK" firstAttribute="top" secondItem="rPj-WQ-7jb" secondAttribute="bottom" id="RIR-es-oQI"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Lvf-bw-Zlc" secondAttribute="trailing" constant="1" id="egk-S2-82P"/>
+                            <constraint firstItem="rPj-WQ-7jb" firstAttribute="top" secondItem="i1l-4o-hbs" secondAttribute="bottom" id="gLx-KQ-ZSB"/>
+                            <constraint firstItem="dbj-KH-JIK" firstAttribute="top" secondItem="Lvf-bw-Zlc" secondAttribute="bottom" constant="58" id="qOT-Kp-51t"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="MGV-Fv-7Yh"/>
                     <connections>
-                        <outlet property="mapView" destination="edg-dp-iup" id="hiG-fp-pxJ"/>
+                        <outlet property="mapView" destination="rPj-WQ-7jb" id="HBr-yz-4Wc"/>
+                        <segue destination="zs5-dI-KEL" kind="show" identifier="goConfigurationView" id="lRN-aJ-chu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GLT-L2-j4r" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-580.79999999999995" y="36.431784107946029"/>
         </scene>
+        <!--Map Configuration View Controller-->
+        <scene sceneID="PGd-ua-IBn">
+            <objects>
+                <viewController id="zs5-dI-KEL" customClass="MapConfigurationViewController" customModule="QPest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ehu-s6-esx"/>
+                        <viewControllerLayoutGuide type="bottom" id="f7E-bq-BOq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wTl-ym-sdh">
+                        <rect key="frame" x="0.0" y="64" width="384" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJw-zZ-dVU">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="169" id="RyP-8q-qIZ"/>
+                                    <constraint firstAttribute="height" constant="21" id="rq1-ex-drL"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Tipo de Mapa">
+                                        <attributes>
+                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="13" name="Avenir-Book"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Ym-6c-tcS">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="58" id="O3Y-9y-63G"/>
+                                    <constraint firstAttribute="height" constant="21" id="cKt-vz-ZMm"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="434">
+                                        <attributes>
+                                            <color key="NSColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.14901960784313725" alpha="0.92857314033742333" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" metaFont="system" size="17"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="right" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="400" minValue="100" maxValue="1000" translatesAutoresizingMaskIntoConstraints="NO" id="EmR-7I-1uN">
+                                <color key="tintColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="303" id="p3W-xp-Hvb"/>
+                                    <constraint firstAttribute="height" constant="30" id="sZX-W6-Xoy"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="sliderDidChange:" destination="zs5-dI-KEL" eventType="valueChanged" id="4as-Et-Rtu"/>
+                                </connections>
+                            </slider>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qAV-RE-Grf">
+                                <segments>
+                                    <segment title="Padrão"/>
+                                    <segment title="Satélite"/>
+                                    <segment title="Híbrido"/>
+                                </segments>
+                                <color key="tintColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="typeDidChange:" destination="zs5-dI-KEL" eventType="valueChanged" id="MBh-r3-0jK"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXu-pK-nnp">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="eHb-wm-ilb"/>
+                                    <constraint firstAttribute="width" constant="169" id="tn0-S1-Dgp"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Proximidade do Mapa">
+                                        <attributes>
+                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="13" name="Avenir-Book"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="qAV-RE-Grf" firstAttribute="top" secondItem="ehu-s6-esx" secondAttribute="bottom" constant="48" id="4d4-0B-MtP"/>
+                            <constraint firstItem="8Ym-6c-tcS" firstAttribute="top" secondItem="EmR-7I-1uN" secondAttribute="bottom" constant="3" id="5UI-QW-q3q"/>
+                            <constraint firstItem="EmR-7I-1uN" firstAttribute="top" secondItem="KXu-pK-nnp" secondAttribute="bottom" constant="8" id="Etz-f1-gXS"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qAV-RE-Grf" secondAttribute="trailing" constant="44" id="HQL-f0-CdS"/>
+                            <constraint firstItem="hJw-zZ-dVU" firstAttribute="leading" secondItem="wTl-ym-sdh" secondAttribute="leadingMargin" id="IN2-UQ-YhE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="8Ym-6c-tcS" secondAttribute="trailing" constant="24" id="Yc7-8F-8vl"/>
+                            <constraint firstItem="hJw-zZ-dVU" firstAttribute="top" secondItem="ehu-s6-esx" secondAttribute="bottom" constant="14" id="bPw-M4-lJ7"/>
+                            <constraint firstItem="f7E-bq-BOq" firstAttribute="top" secondItem="qAV-RE-Grf" secondAttribute="bottom" constant="527" id="lN4-bf-HIc"/>
+                            <constraint firstItem="KXu-pK-nnp" firstAttribute="top" secondItem="ehu-s6-esx" secondAttribute="bottom" constant="108" id="mbh-3W-nS1"/>
+                            <constraint firstItem="qAV-RE-Grf" firstAttribute="leading" secondItem="wTl-ym-sdh" secondAttribute="leadingMargin" constant="44" id="nfL-y6-SPi"/>
+                            <constraint firstItem="EmR-7I-1uN" firstAttribute="leading" secondItem="wTl-ym-sdh" secondAttribute="leadingMargin" constant="25" id="ohF-u5-sSm"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="KXu-pK-nnp" secondAttribute="leading" id="rf4-T7-TIQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EmR-7I-1uN" secondAttribute="trailing" constant="24" id="rxC-dp-KLt"/>
+                            <constraint firstItem="8Ym-6c-tcS" firstAttribute="leading" secondItem="wTl-ym-sdh" secondAttribute="leadingMargin" constant="270" id="xmv-7l-OL8"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mapTypeSegmentedControl" destination="qAV-RE-Grf" id="YbC-09-4uf"/>
+                        <outlet property="slider" destination="EmR-7I-1uN" id="LPd-qT-E2r"/>
+                        <outlet property="sliderLabel" destination="8Ym-6c-tcS" id="Sm7-kH-lbk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5mP-YJ-VZn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-582.39999999999998" y="739.88005997001505"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="centerMap" width="102" height="102"/>
+    </resources>
 </document>
