--- a/QPest/MonitoringHeaderTableViewCell.xib
+++ b/QPest/MonitoringHeaderTableViewCell.xib
@@ -9,14 +9,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="81" id="KGk-i7-Jjw" customClass="MonitoringHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="headerCell" rowHeight="64" id="KGk-i7-Jjw" customClass="MonitoringHeaderTableViewCell" customModule="QPest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="80.5"/>
+                <frame key="frameInset" width="320" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JqD-82-N9Y">
+                        <constraints>
+                            <constraint firstAttribute="width" constant="267" id="Uv9-Dc-vCW"/>
+                            <constraint firstAttribute="height" constant="30" id="qRB-eJ-kwj"/>
+                        </constraints>
                         <attributedString key="attributedText">
                             <fragment content="8 de Outubro">
                                 <attributes>
@@ -31,16 +35,16 @@
                 </subviews>
                 <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="JqD-82-N9Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="3" id="1Ap-dd-Jec"/>
-                    <constraint firstItem="JqD-82-N9Y" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="5iv-2v-u2b"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="JqD-82-N9Y" secondAttribute="bottom" constant="3" id="Ort-EO-tsP"/>
-                    <constraint firstItem="JqD-82-N9Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="26" id="SlL-8N-FFM"/>
+                    <constraint firstItem="JqD-82-N9Y" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="24" id="KoG-oA-zpD"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="JqD-82-N9Y" secondAttribute="bottom" constant="9.5" id="vMQ-WU-zPB"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="JqD-82-N9Y" secondAttribute="trailing" constant="13" id="wDQ-Kr-UyX"/>
+                    <constraint firstItem="JqD-82-N9Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="zDb-jG-P5i"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateTitle" destination="JqD-82-N9Y" id="En4-bp-283"/>
             </connections>
-            <point key="canvasLocation" x="34" y="72.5"/>
+            <point key="canvasLocation" x="34" y="64"/>
         </tableViewCell>
     </objects>
 </document>
