--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -63,6 +63,24 @@
             </objects>
             <point key="canvasLocation" x="241.59999999999999" y="-257.72113943028489"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="s25-ha-OU6">
+            <objects>
+                <viewController id="xmk-MP-exR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IW6-Qk-9iB"/>
+                        <viewControllerLayoutGuide type="bottom" id="R0X-wu-GE3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KJy-Ft-fju">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dHP-bH-sRD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="234" y="393"/>
+        </scene>
         <!--Identification Manual View Controller-->
         <scene sceneID="QBQ-Zy-YSn">
             <objects>
