--- a/QPest/IdentificationStoryboard.storyboard
+++ b/QPest/IdentificationStoryboard.storyboard
@@ -129,6 +129,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="i8i-ur-ZcV">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.93999999999999995" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="sPE-Q8-tOX"/>
+                                </constraints>
+                                <state key="normal">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Finalizado">
+                                            <attributes>
+                                                <color key="NSColor" red="0.23529411764705882" green="0.66274509803921566" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
+                                                <font key="NSFont" size="13" name="Avenir-Book"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <action selector="didClickEndMIPDemo:" destination="jIW-RP-qrT" eventType="touchUpInside" id="MsT-G9-TnH"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1U9-SC-0t8">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="20" id="C8R-LL-H21"/>
@@ -139,17 +159,109 @@
                                     <action selector="didClickBack:" destination="jIW-RP-qrT" eventType="touchUpInside" id="IyN-QQ-qsW"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MIPTitle" translatesAutoresizingMaskIntoConstraints="NO" id="EkZ-Mm-eUA">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="bzg-YX-dgO"/>
+                                    <constraint firstAttribute="width" constant="275" id="rLg-Pj-I1t"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H2n-lt-gbA">
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="106" id="K8M-AH-9A6"/>
+                                    <constraint firstAttribute="height" constant="48" id="zmZ-q9-fpj"/>
+                                </constraints>
+                                <state key="normal" title="Começar">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="didClickBegin:" destination="jIW-RP-qrT" eventType="touchUpInside" id="awP-gG-YZw"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uat-FQ-Epg">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="140" id="UeC-Am-vhG"/>
+                                    <constraint firstAttribute="width" constant="281" id="roc-AT-znW"/>
+                                </constraints>
+                                <attributedString key="attributedText">
+                                    <fragment content="Entenda tudo sobre o que é o MIP, a sua história, como ele traz benefícios, e como você pode começar utilizar essa técnica">
+                                        <attributes>
+                                            <color key="NSColor" red="0.11372549019607843" green="0.11372549019607843" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                            <font key="NSFont" size="15" name="Avenir-MediumOblique"/>
+                                            <real key="NSKern" value="0.0"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0" allowsDefaultTighteningForTruncation="NO">
+                                                <tabStops>
+                                                    <textTab alignment="left" location="28">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="56">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="84">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="112">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="140">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="168">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="196">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="224">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="252">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="280">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="308">
+                                                        <options/>
+                                                    </textTab>
+                                                    <textTab alignment="left" location="336">
+                                                        <options/>
+                                                    </textTab>
+                                                </tabStops>
+                                            </paragraphStyle>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="1" green="0.75294117647058822" blue="0.34509803921568627" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="EkZ-Mm-eUA" firstAttribute="leading" secondItem="ZMD-fC-YBA" secondAttribute="leadingMargin" constant="34" id="212-DB-AW8"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="EkZ-Mm-eUA" secondAttribute="trailing" constant="34" id="3LS-Za-WoV"/>
+                            <constraint firstItem="i8i-ur-ZcV" firstAttribute="leading" secondItem="ZMD-fC-YBA" secondAttribute="leadingMargin" constant="118" id="7fl-FC-Sxu"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="i8i-ur-ZcV" secondAttribute="trailing" constant="119" id="C2a-WO-M1n"/>
+                            <constraint firstItem="H2n-lt-gbA" firstAttribute="top" secondItem="Uat-FQ-Epg" secondAttribute="bottom" constant="38" id="L6a-sc-MU6"/>
+                            <constraint firstItem="EkZ-Mm-eUA" firstAttribute="top" secondItem="eB1-Ob-dln" secondAttribute="bottom" constant="119" id="MHM-JI-9EX"/>
+                            <constraint firstItem="i8i-ur-ZcV" firstAttribute="top" secondItem="eB1-Ob-dln" secondAttribute="bottom" constant="484" id="YGJ-Tq-1RJ"/>
                             <constraint firstItem="1U9-SC-0t8" firstAttribute="leading" secondItem="ZMD-fC-YBA" secondAttribute="leadingMargin" id="ba6-Kx-gAP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Uat-FQ-Epg" secondAttribute="trailing" constant="31" id="idT-Tq-UUf"/>
+                            <constraint firstItem="gNa-Ck-avd" firstAttribute="top" secondItem="i8i-ur-ZcV" secondAttribute="bottom" constant="133" id="kdh-Pt-Tha"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="H2n-lt-gbA" secondAttribute="trailing" constant="119" id="pVn-xo-jzB"/>
+                            <constraint firstItem="Uat-FQ-Epg" firstAttribute="top" secondItem="EkZ-Mm-eUA" secondAttribute="bottom" constant="89" id="rXG-EU-SG4"/>
+                            <constraint firstItem="H2n-lt-gbA" firstAttribute="leading" secondItem="ZMD-fC-YBA" secondAttribute="leadingMargin" constant="118" id="ufV-Fp-3dh"/>
+                            <constraint firstItem="Uat-FQ-Epg" firstAttribute="leading" secondItem="ZMD-fC-YBA" secondAttribute="leadingMargin" constant="31" id="uwG-TB-MSS"/>
                             <constraint firstItem="1U9-SC-0t8" firstAttribute="top" secondItem="eB1-Ob-dln" secondAttribute="bottom" constant="8" id="wCA-3L-QyT"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="beginButton" destination="H2n-lt-gbA" id="V2x-45-QuK"/>
+                        <outlet property="continueButton" destination="i8i-ur-ZcV" id="eP5-li-wnW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xzC-hK-bH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-500" y="1145"/>
+            <point key="canvasLocation" x="-500" y="1144.6776611694154"/>
         </scene>
         <!--Camera View Controller-->
         <scene sceneID="vjw-rx-6a4">
@@ -457,6 +569,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="MIPTitle" width="297" height="100"/>
         <image name="back" width="30" height="52"/>
     </resources>
 </document>
